test: Site Generation

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-# It Begins...
+# Testing Github Pages
+
+- Write in Markdown
+- Save, commit, push
+- View site
+- See if I did it right, or if I broke it entirely.
+
+## Next Steps
+
+- Stop Breaking Things
